Add working DiagramCanvas (nodes only)

--- a/samples/Wasm/wwwroot/css/app.css
+++ b/samples/Wasm/wwwroot/css/app.css
@@ -41,10 +41,10 @@ app {
             margin-left: 1.5rem;
         }
 
-.main .top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+        .main .top-row a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
@@ -97,10 +97,6 @@ app {
                 color: white;
             }
 
-.content {
-    padding-top: 1.1rem;
-}
-
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
 }
@@ -129,12 +125,12 @@ app {
     z-index: 1000;
 }
 
-#blazor-error-ui .dismiss {
-    cursor: pointer;
-    position: absolute;
-    right: 0.75rem;
-    top: 0.5rem;
-}
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
 
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
@@ -166,11 +162,11 @@ app {
         position: sticky;
         top: 0;
     }
-
+/*
     .main > div {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
-    }
+    }*/
 
     .navbar-toggler {
         display: none;
@@ -180,4 +176,10 @@ app {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
+}
+
+.content {
+    width: 100%;
+    height: 100%;
+    padding: 0 !important;
 }
