--- a/samples/Wasm/Shared/MainLayout.razor
+++ b/samples/Wasm/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
         <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
     </div>
 
-    <div class="content px-4">
+    <div class="content">
         @Body
     </div>
 </div>
