--- a/samples/Wasm/Shared/NavMenu.razor
+++ b/samples/Wasm/Shared/NavMenu.razor
@@ -13,13 +13,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="simple">
+                <span class="oi oi-plus" aria-hidden="true"></span> Simple
             </NavLink>
         </li>
     </ul>
