--- a/samples/Wasm/_Imports.razor
+++ b/samples/Wasm/_Imports.razor
@@ -7,3 +7,6 @@
 @using Microsoft.JSInterop
 @using Wasm
 @using Wasm.Shared
+@using Blazor.Diagrams.Core;
+@using Blazor.Diagrams.Core.Models;
+@using Blazor.Diagrams.Components;
