--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -1,1 +1,13 @@
-﻿
+﻿div.diagram-canvas {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+svg.diagram-links, div.diagram-nodes {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
