Add curved links

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -4,7 +4,7 @@
     <svg class="diagram-links">
         @foreach (var link in DiagramManager.AllLinks)
         {
-            <LineLink Link="link" />
+            <CurvedLink Link="link" />
         }
     </svg>
 
