--- a/samples/ServerSide/_Imports.razor
+++ b/samples/ServerSide/_Imports.razor
@@ -1,10 +1,10 @@
 ﻿@using System.Net.Http
-@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Wasm
-@using Wasm.Shared
+@using ServerSide
+@using ServerSide.Shared
 @using TestComponents
