--- a/samples/TestComponents/NavMenu.razor
+++ b/samples/TestComponents/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Routing
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Wasm</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
