Add NodeRenderer and a way to register node components by model type

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -15,7 +15,7 @@
          @onmouseup="OnMouseUp">
         @foreach (var node in DiagramManager.Nodes)
         {
-            <NodeWidget Node="node" />
+            <NodeRenderer Node="node" />
         }
     </div>
 </div>
