Add ability to drag links between ports
Bug: the link doesn't refresh until it's attached

--- a/src/Blazor.Diagrams/Components/PortWidget.razor
+++ b/src/Blazor.Diagrams/Components/PortWidget.razor
@@ -1,6 +1,8 @@
 ﻿@inherits PortWidgetBaseComponent
 
 <div class="port @(Port.Alignment.ToString().ToLower())"
-     @ref="element">
-
+     @ref="element"
+     @onmousedown="OnMouseDown"
+     @onmousedown:stopPropagation
+     @onmouseup="OnMouseUp">
 </div>
