--- a/src/Blazor.Diagrams/Components/LineLink.razor
+++ b/src/Blazor.Diagrams/Components/LineLink.razor
@@ -3,7 +3,7 @@
 <g>
     <line x1="@Link.SourcePort.Position.X"
           y1="@Link.SourcePort.Position.Y"
-          x2="@Link.TargetPort.Position.X"
-          y2="@Link.TargetPort.Position.Y"
+          x2="@(Link.IsAttached ? Link.TargetPort.Position.X : Link.OnGoingPosition.X)"
+          y2="@(Link.IsAttached ? Link.TargetPort.Position.Y : Link.OnGoingPosition.Y)"
           stroke="black" />
 </g>
