Restyle default nodes/ports

--- a/src/Blazor.Diagrams/Components/NodeWidget.razor
+++ b/src/Blazor.Diagrams/Components/NodeWidget.razor
@@ -7,7 +7,7 @@
      style="top: @(Node.Position.Y)px;
             left: @(Node.Position.X)px">
     <div class="node-content">
-        node
+        NodeTitle
         @foreach (var port in Node.Ports)
         {
             <PortWidget Port="port" />
