--- a/src/Blazor.Diagrams/Components/PortWidget.razor
+++ b/src/Blazor.Diagrams/Components/PortWidget.razor
@@ -1,6 +1,6 @@
 ﻿@inherits PortWidgetBaseComponent
 
-<div class="port @(Port.Alignment.ToString().ToLower())"
+<div class="port @(Port.Alignment.ToString().ToLower()) @(Port.Links.Count > 0 ? "has-links" : "")"
      @ref="element"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
