--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -1,22 +1,31 @@
 ﻿.node {
     width: 100px;
-    height: 100px;
-    color: white;
-    background-color: black;
-    border-radius: 20px;
-    border-color: black;
+    height: 80px;
+    border-radius: 10px;
+    background-color: #f5f5f5;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
 }
 
     .node.selected {
-        border: 2px solid red;
+        border: 1px solid #6e9fd4;
     }
+
+        .node.selected .port {
+            border: 1px solid #6e9fd4;
+        }
 
     .node .port {
         width: 20px;
         height: 20px;
         border-radius: 50%;
-        background-color: red;
+        background-color: #f5f5f5;
+        border: 1px solid #d4d4d4;
     }
+
+        .node .port.has-links {
+            background-color: black;
+        }
 
         .node .port.bottom {
             position: absolute;
@@ -33,17 +42,20 @@
         .node .port.left {
             position: absolute;
             left: -10px;
-            top: 40px;
+            top: 30px;
         }
 
         .node .port.right {
             position: absolute;
             right: -10px;
-            top: 40px;
+            top: 30px;
         }
 
     .node > .node-content {
         width: 100%;
         height: 100%;
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
