--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -10,10 +10,16 @@
     position: absolute;
     top: 0;
     left: 0;
+    pointer-events: none;
 }
 
 .node {
     position: absolute;
     user-select: none;
     cursor: move;
+    pointer-events: all;
+}
+
+.link {
+    pointer-events: all;
 }
