Add KeyDown event

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -1,11 +1,13 @@
 ﻿@inherits DiagramCanvasComponent
 
 <div class="diagram-canvas"
+     tabindex="-1"
      @ref="elementReference"
      @onmousedown="OnMouseDown"
      @onmousemove="OnMouseMove"
      @onmousemove:preventDefault
-     @onmouseup="OnMouseUp">
+     @onmouseup="OnMouseUp"
+     @onkeydown="OnKeyDown">
 
     @* Links *@
     <svg class="diagram-links">
