Add ability to zoom on the canvas

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -7,11 +7,13 @@
      @onmousemove="OnMouseMove"
      @onmousemove:preventDefault
      @onmouseup="OnMouseUp"
-     @onkeydown="OnKeyDown">
+     @onkeydown="OnKeyDown"
+     @onwheel="OnWheel"
+     @onwheel:stopPropagation>
 
     @* Links *@
     <svg class="diagram-links"
-         style="transform: translate(@(DiagramManager.Pan.X)px, @(DiagramManager.Pan.Y)px);">
+         style="transform: translate(@(DiagramManager.Pan.X)px, @(DiagramManager.Pan.Y)px) scale(@Zoom);">
         @foreach (var link in DiagramManager.AllLinks)
         {
             <CurvedLink @key="link.Id" Link="link" />
@@ -20,7 +22,7 @@
 
     @* Nodes *@
     <div class="diagram-nodes"
-         style="transform: translate(@(DiagramManager.Pan.X)px, @(DiagramManager.Pan.Y)px);">
+         style="transform: translate(@(DiagramManager.Pan.X)px, @(DiagramManager.Pan.Y)px) scale(@Zoom);">
         @foreach (var node in DiagramManager.Nodes)
         {
             <NodeRenderer @key="node.Id" Node="node" />
