Adjust pan when zooming

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -13,7 +13,7 @@
 
     @* Links *@
     <svg class="diagram-links"
-         style="transform: translate(@(DiagramManager.Pan.X)px, @(DiagramManager.Pan.Y)px) scale(@Zoom);">
+         style="transform: translate(@(PanX)px, @(PanY)px) scale(@Zoom);">
         @foreach (var link in DiagramManager.AllLinks)
         {
             <CurvedLink @key="link.Id" Link="link" />
@@ -22,7 +22,7 @@
 
     @* Nodes *@
     <div class="diagram-nodes"
-         style="transform: translate(@(DiagramManager.Pan.X)px, @(DiagramManager.Pan.Y)px) scale(@Zoom);">
+         style="transform: translate(@(PanX)px, @(PanY)px) scale(@Zoom);">
         @foreach (var node in DiagramManager.Nodes)
         {
             <NodeRenderer @key="node.Id" Node="node" />
