--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -4,6 +4,7 @@
     position: relative;
     outline: none;
     overflow: hidden;
+    cursor: grab;
 }
 
 .diagram-links, .diagram-nodes {
@@ -13,6 +14,10 @@
     top: 0;
     left: 0;
     pointer-events: none;
+}
+
+.diagram-links {
+    overflow: visible !important;
 }
 
 .node {
