--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -16,7 +16,7 @@
          style="transform: translate(@(PanX)px, @(PanY)px) scale(@Zoom);">
         @foreach (var link in DiagramManager.AllLinks)
         {
-            <LinkWidget @key="link.Id" Link="link" />
+            <LinkRenderer @key="link.Id" Link="link" />
         }
     </svg>
 
