--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -7,16 +7,16 @@
 }
 
 .diagram-links, .diagram-nodes {
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    position: absolute;
+    pointer-events: none;
+    transform-origin: 0px 0px;
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-}
-
-.diagram-links {
-    overflow: visible !important;
+    overflow: visible;
 }
 
 .node {
