Add QuickStart tutorial

--- a/samples/SharedDemo/Layouts/DocsLayout.razor
+++ b/samples/SharedDemo/Layouts/DocsLayout.razor
@@ -17,7 +17,7 @@
                 <h1 class="logo">
                     <a href="/">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
-                        <span class="text-highlight">Z.lazor.</span><span class="text-bold">Diagrams</span>
+                        <span class="text-highlight">Blazor.</span><span class="text-bold">Diagrams</span>
                     </a>
                 </h1>
             </div>
@@ -40,3 +40,9 @@
     </div>
 
 </div>
+
+<footer id="footer" class="footer text-center">
+    <div class="container">
+        <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> for developers</small>
+    </div>
+</footer>
