--- a/samples/SharedDemo/_Imports.razor
+++ b/samples/SharedDemo/_Imports.razor
@@ -3,3 +3,6 @@
 @using Blazor.Diagrams.Core.Models;
 @using Blazor.Diagrams.Components;
 @using SharedDemo.Layouts
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
