--- a/samples/ServerSide/App.razor
+++ b/samples/ServerSide/App.razor
@@ -3,7 +3,7 @@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(SharedDemo.Layouts.DocsLayout)" />
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(SharedDemo.Layouts.DocsLayout)">
+        <LayoutView Layout="@typeof(SharedDemo.Layouts.EmptyLayout)">
             <p>Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
