Add Simple & Locked demos

--- a/samples/SharedDemo/Home.razor
+++ b/samples/SharedDemo/Home.razor
@@ -58,7 +58,7 @@
                         </div>
                         <h3 class="title">Demos</h3>
                         <p class="intro">Discover Blazor.Diagrams by checking out the demos and samples</p>
-                        <a class="link" href="demos"><span></span></a>
+                        <a class="link" href="demos/simple"><span></span></a>
                     </div>
                 </div>
             </div>
