Add Events demo

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -32,7 +32,8 @@
         <div class="sidebar-heading">Demos</div>
         <div class="list-group list-group-flush">
             <a href="demos/simple" class="list-group-item list-group-item-action bg-light">Simple</a>
-            <a href="demos/locked" class="list-group-item list-group-item-action bg-light">Locked nodes/links</a>
+            <a href="demos/locked" class="list-group-item list-group-item-action bg-light">Locked models</a>
+            <a href="demos/events" class="list-group-item list-group-item-action bg-light">Events</a>
         </div>
     </div>
     <div id="page-content-wrapper">
