--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -34,6 +34,7 @@
             <a href="demos/simple" class="list-group-item list-group-item-action bg-light">Simple</a>
             <a href="demos/locked" class="list-group-item list-group-item-action bg-light">Locked models</a>
             <a href="demos/events" class="list-group-item list-group-item-action bg-light">Events</a>
+            <a href="demos/dynamic-insertions" class="list-group-item list-group-item-action bg-light">Dynamic insertions</a>
         </div>
     </div>
     <div id="page-content-wrapper">
