Add custom node demo

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -35,6 +35,7 @@
             <a href="demos/locked" class="list-group-item list-group-item-action bg-light">Locked models</a>
             <a href="demos/events" class="list-group-item list-group-item-action bg-light">Events</a>
             <a href="demos/dynamic-insertions" class="list-group-item list-group-item-action bg-light">Dynamic insertions</a>
+            <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
         </div>
     </div>
     <div id="page-content-wrapper">
