--- a/samples/SharedDemo/_Imports.razor
+++ b/samples/SharedDemo/_Imports.razor
@@ -6,3 +6,5 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Blazor.Diagrams.Components.Base
+@using Blazor.Diagrams.Core.Extensions;
