--- a/src/Blazor.Diagrams/Components/NodeWidget.razor
+++ b/src/Blazor.Diagrams/Components/NodeWidget.razor
@@ -1,6 +1,6 @@
 ﻿@inherits Blazor.Diagrams.Components.Base.NodeWidgetBaseComponent
 
-<div class="node @(Node.Selected ? "selected" : "")"
+<div class="node default @(Node.Selected ? "selected" : "")"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
      @ref="element"
