--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -1,4 +1,4 @@
-﻿.node {
+﻿.node.default {
     width: 100px;
     height: 80px;
     border-radius: 10px;
@@ -7,15 +7,15 @@
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
 }
 
-    .node.selected {
+    .node.default.selected {
         border: 1px solid #6e9fd4;
     }
 
-        .node.selected .port {
+        .node.default.selected .port {
             border: 1px solid #6e9fd4;
         }
 
-    .node .port {
+    .node.default .port {
         width: 20px;
         height: 20px;
         border-radius: 50%;
@@ -24,35 +24,35 @@
         cursor: pointer;
     }
 
-        .node .port:hover, .node .port.has-links {
+        .node.default .port:hover, .node.default .port.has-links {
             background-color: black;
         }
 
-        .node .port.bottom {
+        .node.default .port.bottom {
             position: absolute;
             bottom: -10px;
             left: 40px;
         }
 
-        .node .port.top {
+        .node.default .port.top {
             position: absolute;
             top: -10px;
             left: 40px;
         }
 
-        .node .port.left {
+        .node.default .port.left {
             position: absolute;
             left: -10px;
             top: 30px;
         }
 
-        .node .port.right {
+        .node.default .port.right {
             position: absolute;
             right: -10px;
             top: 30px;
         }
 
-    .node > .node-content {
+    .node.default > .node-content {
         width: 100%;
         height: 100%;
         position: relative;
