Add performance demo

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -36,6 +36,7 @@
             <a href="demos/events" class="list-group-item list-group-item-action bg-light">Events</a>
             <a href="demos/dynamic-insertions" class="list-group-item list-group-item-action bg-light">Dynamic insertions</a>
             <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
+            <a href="demos/performance" class="list-group-item list-group-item-action bg-light">Performance</a>
         </div>
     </div>
     <div id="page-content-wrapper">
