--- a/src/Blazor.Diagrams/_Imports.razor
+++ b/src/Blazor.Diagrams/_Imports.razor
@@ -1,3 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Blazor.Diagrams.Components.Base;
 @using Blazor.Diagrams.Core.Extensions;
+@using Blazor.Diagrams.Core.Models;
