--- a/src/Blazor.Diagrams/Components/NodeWidget.razor
+++ b/src/Blazor.Diagrams/Components/NodeWidget.razor
@@ -1,4 +1,4 @@
-﻿@inherits Blazor.Diagrams.Components.Base.NodeWidgetBaseComponent
+﻿@inherits NodeWidgetBaseComponent
 
 <div class="node default @(Node.Selected ? "selected" : "")"
      @onmousedown="OnMouseDown"
