Add ability to zoom to fit nodes (all or selected)

--- a/samples/SharedDemo/Demos/Simple.razor
+++ b/samples/SharedDemo/Demos/Simple.razor
@@ -9,7 +9,7 @@
         base.OnInitialized();
 
         LayoutData.Title = "Simple";
-        LayoutData.Info = "A simple example of Blazor.Diagrams";
+        LayoutData.Info = "A simple example of Blazor.Diagrams.";
         LayoutData.DataChanged();
     }
 }
