--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -37,6 +37,7 @@
             <a href="demos/dynamic-insertions" class="list-group-item list-group-item-action bg-light">Dynamic insertions</a>
             <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
             <a href="demos/performance" class="list-group-item list-group-item-action bg-light">Performance</a>
+            <a href="demos/zoomtofit" class="list-group-item list-group-item-action bg-light">Zoom to fit</a>
         </div>
     </div>
     <div id="page-content-wrapper">
