Add a basic navigator that shows nodes & handles changes

--- a/samples/SharedDemo/Demos/Simple.razor
+++ b/samples/SharedDemo/Demos/Simple.razor
@@ -15,5 +15,9 @@
 }
 
 <CascadingValue Name="DiagramManager" Value="diagramManager">
-    <DiagramCanvas></DiagramCanvas>
+    <DiagramCanvas>
+        <Widgets>
+            <Navigator Width="300" Height="300" DefaultStyle="true"></Navigator>
+        </Widgets>
+    </DiagramCanvas>
 </CascadingValue>
