--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -60,3 +60,11 @@
         align-items: center;
         justify-content: center;
     }
+
+.diagram-navigator.default {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border: 3px solid #9BA8B0;
+    border-radius: 15px;
+}
