Rewrite the whole algorithm to calculate real full size

--- a/src/Blazor.Diagrams/Components/Navigator.razor
+++ b/src/Blazor.Diagrams/Components/Navigator.razor
@@ -1,23 +1,24 @@
 ﻿@inherits NavigatorComponent
 
-<div class="diagram-navigator@(DefaultStyle ? " default" : "")"
-     style="width: @(Width.ToInvariantString())px; height: @(Height.ToInvariantString())px">
-    <svg width="100%" height="100%">
-        @if (AllNodesContainer != null)
-        {
-            @foreach (var node in DiagramManager.Nodes.Where(n => n.Size != null))
-            {
-                var left = (node.Position.X - AllNodesContainer.Left) * XFactor;
-                var top = (node.Position.Y - AllNodesContainer.Top) * YFactor;
-                var width = node.Size.Width * XFactor;
-                var height = node.Size.Height * YFactor;
+<div class="diagram-navigator@(DefaultStyle ? " default" : "")">
+    <svg width="@(Width.ToInvariantString())px" height="@(Height.ToInvariantString())px">
+        @{
+            var addedPosX = Math.Max(0, DiagramManager.Pan.X);
+            var addedPosY = Math.Max(0, DiagramManager.Pan.Y);
+        }
 
-                <g @key="node.Id" transform="translate(@left.ToInvariantString(), @top.ToInvariantString())">
-                    <rect fill="#31d0c6"
-                          width="@width.ToInvariantString()"
-                          height="@height.ToInvariantString()"></rect>
-                </g>
-            }
+        @foreach (var node in DiagramManager.Nodes.Where(n => n.Size != null))
+        {
+            var left = (node.Position.X + addedPosX) * XFactor;
+            var top = (node.Position.Y + addedPosY) * YFactor;
+            var width = node.Size.Width * XFactor;
+            var height = node.Size.Height * YFactor;
+
+            <g @key="node.Id" transform="translate(@left.ToInvariantString(), @top.ToInvariantString())">
+                <rect fill="#31d0c6"
+                      width="@width.ToInvariantString()"
+                      height="@height.ToInvariantString()"></rect>
+            </g>
         }
     </svg>
 </div>
